--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.0",
     "buffer": "^6.0.3",
     "compressorjs": "^1.2.1",
+    "jest": "^29.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -51,8 +52,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "babel-jest": "^29.7.0",
     "tailwindcss": "^3.3.3"
   }
 }
